--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "country-flag-icons": "^1.5.12",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
+    "next-intl": "^3.15.2",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
