--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "country-flag-icons": "^1.5.12",
+    "geist": "^1.3.0",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
     "next-intl": "^3.15.2",
