--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "country-flag-icons": "^1.5.12",
     "geist": "^1.3.0",
     "lucide-react": "^0.390.0",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "next-intl": "^3.15.2",
     "next-themes": "^0.3.0",
     "react": "^18",
