--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "country-flag-icons": "^1.5.12",
+    "framer-motion": "^11.3.2",
     "geist": "^1.3.0",
     "lucide-react": "^0.390.0",
     "next": "^14.2.4",
     "next-intl": "^3.15.2",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-audio-play": "^1.0.2",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
